--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "cross-fetch": "^2.2.0",
     "express": "^4.16.3",
+    "hover.css": "^2.3.2",
     "mongodb": "^3.1.0-beta4",
     "node-fetch": "^2.1.2",
     "react": "^16.3.2",
