--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-canvas-draw": "^0.1.9",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
     "react-twitter-widgets": "^1.7.1",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.1"
