--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "react-twitter-widgets": "^1.7.1",
+    "reshake": "^1.0.8",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.1"
   },
