--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "socket_tweets",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.18.0",
     "base64-img": "^1.0.4",
@@ -12,6 +11,7 @@
     "hover.css": "^2.3.2",
     "is_js": "^0.9.0",
     "mongodb": "^3.1.0-beta4",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "node-fetch": "^2.1.2",
     "react": "^16.3.2",
     "react-canvas-draw": "^0.1.9",
