--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "hover.css": "^2.3.2",
     "is_js": "^0.9.0",
+    "lodash": "^4.17.19",
     "mongodb": "^3.1.0-beta4",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "node-fetch": "^2.1.2",
